fix chart alignment

--- a/styles/spreadsheet.css
+++ b/styles/spreadsheet.css
@@ -24,6 +24,10 @@ th {
 	background-color: #d0d0d0;
 }
 
+#svg-div {
+	text-align: center;
+}
+
 .select {
 	background-color: #e0e0ff;
 }
